--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     </div>
     
     <div class="media">
-        <div class="hero-title">
-            My favorite shades of nature!
-        </div>
-        <div class="hero-text">
-
-        </div>
-        <div class="hero-button">
-
+        <div class="media-text">
+            <div class="hero-title">
+                <div>My favorite shades of nature!</div>
+            </div>
+            <div class="hero-text">
+                <div>I hope you guys enjoy some of my favorite pictures I found of nature! I'm honestly just trying to fill this space</div>
+            </div>
+            <div class="hero-button">
+                <div>Sign up</div>
+            </div>
         </div>
     </div>
 </body>
