What I had left before I had to go!

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="media">
         <div class="media-text">
             <div class="hero-title">
-                <div>My favorite shades of nature!</div>
+                <div>Shades of nature!</div>
             </div>
             <div class="hero-text">
                 <div>I hope you guys enjoy some of my favorite pictures I found of nature! I'm honestly just trying to fill this space</div>
@@ -40,6 +40,7 @@
                 <div>Sign up</div>
             </div>
         </div>
+            <img src="images/mediaimage.jpg">
     </div>
 </body>
 
