Added gallery part!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div>Media</div>
         </div>
         <div class="link-three">
-            <div>Something</div>
+            <div>Some thing</div>
         </div>
     </div>
     
@@ -37,10 +37,54 @@
                 <div>I hope you guys enjoy some of my favorite pictures I found of nature! I'm honestly just trying to fill this space</div>
             </div>
             <div class="hero-button">
-                <div>Sign up</div>
+                <div class="signup">Sign up</div>
             </div>
         </div>
             <img src="images/mediaimage.jpg">
+    </div>
+
+    <div class="gallery">
+        <div class="gallery-title">
+            Cool blue nature pictures!
+        </div>
+        <div class="gallery-items">
+            <div class="item">
+                <img src="images/cardone.jpg">
+                <div class="content">
+                    Check out that moutain peaking out of the clouds!
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/cardtwo.jpg">
+                <div class="content">
+                    Loving those crystal clear water beaches!
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/cardthree.jpg">
+                <div class="content">
+                    Look at how vast that lake is!
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="images/cardfour.jpg">
+                <div class="content">
+                    Woah, those are some serious cliffs!
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <div class="content">
+
+        </div>
+        <div class="author">
+
+        </div>
     </div>
 </body>
 
