--- a/index.html
+++ b/index.html
@@ -80,10 +80,26 @@
 
     <div class="quote">
         <div class="content">
-
+            This is an inspiring quote, or maybe a great testimonial from a great person.
+            Or maybe it might just be completely random text of me rambling trying to fill up this text box.
+            So that I could practice html and css. It looks nice at least.
         </div>
         <div class="author">
+            -Daniel
+        </div>
+    </div>
 
+    <div class="signup-box">
+        <div class="signup-text">
+            <div class="title">
+                Call to action! It's time!
+            </div>
+            <div class="text">
+                Sign up for more nature pictures by clicking that button over there.
+            </div>
+        </div>
+        <div class="button">
+            <div class="signup">Sign up</div>
         </div>
     </div>
 </body>
